# zendesk-ai-agent

./: .env.example  .gitignore  LICENSE  README.md  cli.py  main.py  model_provider.py  pyproject.toml  requirements.txt  system_prompt.txt  zendesk_client.py
config/: system_prompt.txt.example  ticket_analysis.txt
src/: cli.py  groq_response.py  main.py  model_provider.py  summarizer_ui.py  testing.ipynb  ui.py
