[project]
name = "zendesk-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=5.34.2",
    "groq>=0.28.0",
    "ipykernel>=6.29.5",
    "openai>=1.90.0",
    "pip>=25.1.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
]
